--- a/results-and-winnings/Grand-lotto-6-55-results.html
+++ b/results-and-winnings/Grand-lotto-6-55-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Nov29">November 29, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">45</span><span class="ball text-xl">53</span><span class="ball text-xl">32</span><span class="ball text-xl">41</span><span class="ball text-xl">27</span><span class="ball text-xl">11</span></p>
+     <h4>Jackpot Prize : &#8369;29,700,000</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
