--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -182,13 +182,13 @@ function openNav() {
 	<br>
 	<img src="images/6-55.png" alt="Grand Lotto 6/55 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Grand lotto 6/55 result</strong></span></h2>
-	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4><span class="ball">45</span><span class="ball">53</span><span class="ball">32</span><span class="ball">41</span><span class="ball">27</span><span class="ball">11</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>November 29, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Jackpot Prize : &#8369;29,700,000</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="49Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Grand-lotto-6-55-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -224,13 +224,13 @@ function openNav() {
 	<br>
 	<img src="images/6-45.png" alt="Mega Lotto 6/45 results" style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Mega lotto 6/45 result</strong></span></h2>
-	<h4 ><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 ><span class="ball">2</span><span class="ball">26</span><span class="ball">7</span><span class="ball">4</span><span class="ball">32</span><span class="ball">3</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>November 29, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Jackpot Prize : &#8369;55,079,589</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="42Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Mega-lotto-6-45-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
