--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -148,9 +148,9 @@ function closeNav() {
      <label for="Nov29">November 29, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">2</span><span class="ball text-xl">26</span><span class="ball text-xl">7</span><span class="ball text-xl">4</span><span class="ball text-xl">32</span><span class="ball text-xl">3</span></p>
+     <h4>Jackpot Prize : &#8369;55,079,589</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
