--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -229,6 +229,15 @@ function closeNav() {
 	</div>
     
   <div class="side">
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Side big -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9705447986"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <img src="../images/6-58-how.png" alt="How to play PCSO Ultra Lotto 6/58" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
   </div>
 </div>
