--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -145,6 +145,16 @@ function closeNav() {
 <div class="row" style="max-width:1200px; margin:auto">
   
   <div class="main">
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   	<a href="../index.html" class="ff" style="margin-left:2px; font-size:10px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
   	<a href="../PCSO-Lotto-and-Games.html" class="ff" style="font-size:10px; color:#626567; text-decoration:none; display:inline-block">Lotto & Games /</a>
   	<a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" class="ff" style="font-size:10px; color:#626567; text-decoration: none; display:inline-block">Ultra Lotto 6/58<span class="htp"> How to play UltraLotto 6/58</span></a>
