--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -293,7 +293,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">4</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
@@ -348,7 +348,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">22</span>&nbsp;&nbsp;<span class="ball text-xl">11</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
