--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+	<input id="dec14" type="radio" name="t">
+	<label for="dec14">December 14, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">37</span><span class="ball text-xl">33</span><span class="ball text-xl">35</span><span class="ball text-xl">6</span><span class="ball text-xl">8</span><span class="ball text-xl">28</span></p>
+	<h4>Jackpot Prize : &#8369;17,506,761</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     
+	     <div class="tab blue">
 	<input id="dec12" type="radio" name="t">
 	<label for="dec12">December 12, 2017</label>
 	<div class="tab-content">
