--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -184,13 +184,13 @@ function openNav() {
 	<br>
 	<img src="images/6-55.png" alt="Grand Lotto 6/55 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Grand lotto 6/55 result</strong></span></h2>
-	<h4><span class="ball">24</span><span class="ball">12</span><span class="ball">7</span><span class="ball">23</span><span class="ball">43</span><span class="ball">50</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 13, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 16, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;29,700,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="49Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Grand-lotto-6-55-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -257,13 +257,13 @@ function openNav() {
 	<br>
 	<img src="images/6-42.png" alt="PCSO Lotto 6/42 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>PCSO lotto 6/42 result</strong></span></h2>
-	<h4><span class="ball">14</span><span class="ball">5</span><span class="ball">16</span><span class="ball">28</span><span class="ball">23</span><span class="ball">1</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 14, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 16, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;5,940,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="SwertresResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/PCSO-lotto-6-42-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -399,8 +399,8 @@ function openNav() {
 	<br>
 	<img src="images/6-Digit.png" alt="PCSO 6-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>6-Digit Game result</strong></span></h2>
-	<h4><span class="ball">2</span><span class="ball">9</span><span class="ball">0</span><span class="ball">3</span><span class="ball">0</span><span class="ball">0</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 14, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 16, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
